--- a/server/package.json
+++ b/server/package.json
@@ -18,16 +18,21 @@
 		"test:watch": "jest --watch",
 		"test:cov": "jest --coverage",
 		"test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-		"test:e2e": "jest --config ./test/jest-e2e.json"
+		"test:e2e": "jest --config ./test/jest-e2e.json",
+		"docker:start": "sh docker/scripts/start.sh",
+		"docker:destroy": "sh docker/scripts/destroy.sh"
 	},
 	"dependencies": {
 		"@nestjs/common": "^8.0.0",
 		"@nestjs/config": "^1.0.2",
 		"@nestjs/core": "^8.0.0",
 		"@nestjs/graphql": "^7.10.6",
+		"@nestjs/jwt": "^8.0.0",
 		"@nestjs/platform-express": "^8.0.0",
 		"@nestjs/typeorm": "^8.0.2",
 		"apollo-server-express": "^2.24.1",
+		"argon2": "^0.28.2",
+		"cookie-parser": "^1.4.5",
 		"dotenv": "^10.0.0",
 		"graphql": "^15.6.1",
 		"graphql-tools": "^7.0.5",
@@ -42,6 +47,7 @@
 		"@nestjs/cli": "^8.0.0",
 		"@nestjs/schematics": "^8.0.0",
 		"@nestjs/testing": "^8.0.0",
+		"@types/cookie-parser": "^1.4.2",
 		"@types/express": "^4.17.13",
 		"@types/jest": "^27.0.1",
 		"@types/node": "^16.0.0",
