--- a/web/package.json
+++ b/web/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
+  "name": "vite-template-solid",
+  "version": "0.0.0",
+  "description": "",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "vite",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "typescript": "^4.4.3",
+    "vite": "^2.5.7",
+    "vite-plugin-solid": "^2.0.3"
   },
   "dependencies": {
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "@types/react": "17.0.33",
-    "eslint": "8.1.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.4"
+    "@urql/core": "^2.3.4",
+    "graphql": "^16.0.1",
+    "solid-js": "^1.1.3",
+    "solid-urql": "^0.1.0"
   }
 }
