--- a/web/package.json
+++ b/web/package.json
@@ -17,7 +17,10 @@
   "dependencies": {
     "@urql/core": "^2.3.4",
     "graphql": "^16.0.1",
-    "solid-js": "^1.1.3",
+    "quill": "^1.3.7",
+    "solid-js": "^1.2.2",
+    "solid-quill": "^0.3.4",
+    "solid-styled-components": "^0.27.3",
     "solid-urql": "^0.1.0"
   }
 }
