--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -3,10 +3,17 @@ version: '3'
 services:
   postgres:
     image: postgres:12.5-alpine
-    container_name: next_notes_pg
+    container_name: solid_notes_pg
     env_file:
       - ./config/docker.env
     environment:
       - POSTGRES_PASSWORD=postgres
     ports:
       - '5432:5432'
+  redis:
+    image: redis:latest
+    environment:
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+    ports:
+      - '6379:6379'
