--- a/server/package.json
+++ b/server/package.json
@@ -30,14 +30,20 @@
 		"@nestjs/jwt": "^8.0.0",
 		"@nestjs/platform-express": "^8.0.0",
 		"@nestjs/typeorm": "^8.0.2",
+		"@types/passport-jwt": "^3.0.6",
 		"apollo-server-express": "^2.24.1",
 		"argon2": "^0.28.2",
+		"connect-redis": "^6.0.0",
 		"cookie-parser": "^1.4.5",
 		"dotenv": "^10.0.0",
+		"express": "^4.17.1",
+		"express-session": "^1.17.2",
 		"graphql": "^15.6.1",
 		"graphql-tools": "^7.0.5",
 		"joi": "^17.4.2",
+		"passport-jwt": "^4.0.0",
 		"pg": "^8.7.1",
+		"redis": "^3.1.2",
 		"reflect-metadata": "^0.1.13",
 		"rimraf": "^3.0.2",
 		"rxjs": "^7.2.0",
@@ -47,10 +53,13 @@
 		"@nestjs/cli": "^8.0.0",
 		"@nestjs/schematics": "^8.0.0",
 		"@nestjs/testing": "^8.0.0",
+		"@types/connect-redis": "^0.0.17",
 		"@types/cookie-parser": "^1.4.2",
 		"@types/express": "^4.17.13",
+		"@types/express-session": "^1.17.4",
 		"@types/jest": "^27.0.1",
 		"@types/node": "^16.0.0",
+		"@types/redis": "^2.8.32",
 		"@types/supertest": "^2.0.11",
 		"@typescript-eslint/eslint-plugin": "^5.0.0",
 		"@typescript-eslint/parser": "^5.0.0",
