--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@urql/core": "^2.3.4",
+    "@urql/devtools": "^2.0.3",
+    "@urql/exchange-graphcache": "^4.3.5",
     "graphql": "^16.0.1",
     "quill": "^1.3.7",
     "solid-js": "^1.2.2",
