--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "@urql/exchange-graphcache": "^4.3.5",
     "graphql": "^16.0.1",
     "quill": "^1.3.7",
+    "solid-app-router": "^0.1.11",
     "solid-js": "^1.2.2",
     "solid-quill": "^0.3.4",
     "solid-styled-components": "^0.27.3",
