--- a/web/package.json
+++ b/web/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "vite-template-solid",
-  "version": "0.0.0",
-  "description": "",
+  "name": "web",
+  "private": true,
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "MIT",
-  "devDependencies": {
-    "typescript": "^4.4.3",
-    "vite": "^2.5.7",
-    "vite-plugin-solid": "^2.0.3"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@urql/core": "^2.3.4",
+    "@urql/core": "^2.3.5",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-graphcache": "^4.3.5",
     "graphql": "^16.0.1",
-    "quill": "^1.3.7",
-    "solid-app-router": "^0.1.11",
-    "solid-js": "^1.2.2",
-    "solid-quill": "^0.3.4",
-    "solid-styled-components": "^0.27.3",
-    "solid-urql": "^0.1.0"
+    "next": "12.0.7",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.21.0",
+    "react-quill": "^1.3.5",
+    "styled-components": "^5.3.3",
+    "urql": "^2.0.5",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "@types/node": "16.11.11",
+    "@types/react": "17.0.37",
+    "@types/styled-components": "^5.1.16",
+    "eslint": "8.4.0",
+    "eslint-config-next": "12.0.7",
+    "typescript": "4.5.2"
   }
 }
