--- a/server/docker/docker-compose.yml
+++ b/server/docker/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   postgres:
     image: postgres:12.5-alpine
-    container_name: solid_notes_pg
+    container_name: next_notes_pg
     env_file:
       - ./config/docker.env
     environment:
@@ -17,3 +17,85 @@ services:
       - REDIS_PORT=6379
     ports:
       - '6379:6379'
+  es001:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
+    container_name: es001
+    environment:
+      - node.name=es001
+      - cluster.name=es-docker-cluster
+      - discovery.seed_hosts=es002,es003
+      - cluster.initial_master_nodes=es001,es002,es003
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - data01:/usr/share/elasticsearch/data
+    ports:
+      - 9200:9200
+    networks:
+      - elastic
+
+  es002:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
+    container_name: es002
+    environment:
+      - node.name=es002
+      - cluster.name=es-docker-cluster
+      - discovery.seed_hosts=es001,es003
+      - cluster.initial_master_nodes=es001,es002,es003
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - data02:/usr/share/elasticsearch/data
+    networks:
+      - elastic
+
+  es003:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.16.2
+    container_name: es003
+    environment:
+      - node.name=es003
+      - cluster.name=es-docker-cluster
+      - discovery.seed_hosts=es001,es002
+      - cluster.initial_master_nodes=es001,es002,es003
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - data03:/usr/share/elasticsearch/data
+    networks:
+      - elastic
+
+  kib001:
+    image: docker.elastic.co/kibana/kibana:7.16.2
+    container_name: kib001
+    ports:
+      - 5601:5601
+    environment:
+      ELASTICSEARCH_URL: http://es001:9200
+      ELASTICSEARCH_HOSTS: '["http://es001:9200","http://es002:9200","http://es003:9200"]'
+    networks:
+      - elastic
+
+volumes:
+  data01:
+    driver: local
+  data02:
+    driver: local
+  data03:
+    driver: local
+
+networks:
+  elastic:
+    driver: bridge
+
