--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,8 @@
     "react-quill": "^1.3.5",
     "styled-components": "^5.3.3",
     "urql": "^2.0.5",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
