--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
 		"@nestjs/config": "^1.0.2",
 		"@nestjs/core": "^8.0.0",
 		"@nestjs/elasticsearch": "^8.0.0",
+		"@nestjs/event-emitter": "^1.0.0",
 		"@nestjs/graphql": "^7.10.6",
 		"@nestjs/jwt": "^8.0.0",
 		"@nestjs/platform-express": "^8.0.0",
