--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,6 @@
     "@urql/core": "^2.3.5",
     "@urql/devtools": "^2.0.3",
     "@urql/exchange-graphcache": "^4.3.5",
-    "axios": "^0.24.0",
     "graphql": "^16.0.1",
     "next": "12.0.7",
     "react": "17.0.2",
@@ -20,9 +19,7 @@
     "react-icons": "^4.3.1",
     "react-quill": "^1.3.5",
     "styled-components": "^5.3.3",
-    "urql": "^2.0.5",
-    "yup": "^0.32.11",
-    "zustand": "^3.6.7"
+    "urql": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
