--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@urql/exchange-graphcache": "^4.3.5",
     "graphql": "^16.0.1",
     "next": "12.0.7",
+    "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.21.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/node": "16.11.11",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "17.0.37",
     "@types/styled-components": "^5.1.16",
     "eslint": "8.4.0",
